# poe-bot-host

./: .env.example  .gitignore  .pre-commit-config.yaml  API_KEY_MANAGEMENT.md  DEPLOYMENT.md  FINAL_IMPLEMENTATION_PLAN.md  GEMINI_IMAGE_FIX.md  IMPLEMENTATION_PLAN.md  LICENSE  MULTI_PROVIDER_DESIGN.md  Makefile  QUICKSTART.md  README.md  README.zh-CN.md  README_YOUTUBE_DOWNLOADER.md  REVISED_IMPLEMENTATION_PLAN.md  app.py  debug_api_call.py  debug_attachment.py  deploy_and_sync.sh  deploy_bots.py  direct_gemini_fix_test.py  fix_api_attachment.py  gemini_image_testing.md  list_gemini_bots.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_local.py  run_local.sh  run_with_access_key.sh  set_rate_card.py  set_rate_card_direct.py  set_rate_card_simple.py  set_youtube_bot_rate_card.py  setup.py  simple_test_youtube_bot.py  sync_bot_settings.py  test_bot.py  test_final_gemini_fix.py  (+6 more)
assets/: README.md
bots/: __init__.py  bot_caller_bot.py  calculator_bot.py  chatgpt.py  echo_bot.py  file_analyzer_bot.py  function_calling_bot.py  gemini.py  gemini_image_bot.py  gemini_models.py  reverse_bot.py  template_bot.py  uppercase_bot.py  weather_bot.py  web_search_bot.py  youtube_downloader_bot.py
docs/: gemini-bot-guide.md
examples/: README.md  add_weather_bot.md  api_key_management.md  gemini_monetization_example.py  modal_api_key_example.py  modal_bot_example.py  modal_secrets_setup.md  standalone_echobot.py  weather_bot.py
scripts/: README.md  access_key_config.py  check_google_api_key.py  debug_modal.py  gemini_image_test_results.md  set_bot_rate_card.py  set_youtube_bot_rate_card.py  test_bot_cli.py  test_gemini_api.py  test_gemini_api_directly.py  test_gemini_image.py  test_media_processing.py  test_simple_gemini.py  update_bot_settings.py  update_youtube_bot_settings.py
temp_test_venv/: pyvenv.cfg
temp_venv/: pyvenv.cfg
tests/: __init__.py  (+22 more)
(+25 files in other folders)
